Fixed #13 - Footer alignment

--- a/static/css/sk3.css
+++ b/static/css/sk3.css
@@ -5,7 +5,6 @@
   --font-size: 1em;
   --html-width: 1200px;
   --line-height: 1.429em;
-  --line-height-a: 1.7em;
   --link-color: #3d84ff;
   --margin-pad-full: 0.7em;
   --margin-pad-half: 0.35em;
@@ -46,10 +45,6 @@ html {
   font-family: Arial, Helvetica, sans-serif, "Lucida Console", Monaco, monospace;
   font-size: var(--font-size);
   line-height: var(--line-height);
-}
-
-a {
-  line-height: var(--line-height-a);
 }
 
 body {
